--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
+    
+    //JAXB for xml support
+    //compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
@@ -32,4 +35,7 @@ dependencies {
 
 // Define the main class for the application
 mainClassName = 'App'
+
+// Define java source compatibility
+sourceCompatibility = '1.8'
 
